--- a/i18n/translations/en.json
+++ b/i18n/translations/en.json
@@ -79,7 +79,8 @@
     "privacyPolicy": "Privacy Policy",
     "FAQ": "FAQ",
     "feedback": "Feedback",
-    "logout": "Logout"
+    "logout": "Logout",
+    "currentLanguage": "English"
   },
   "supportedLanguages": {
     "en": "English",
