--- a/i18n/translations/ukr.json
+++ b/i18n/translations/ukr.json
@@ -72,7 +72,8 @@
       "feedback": "Зворотній зв'язок",
       "logout": "Вийти",
       "en": "English",
-      "ukr": "Українська"
+      "ukr": "Українська",
+      "currentLanguage": "Українська"
     },
     "eventScreen": {
       "headText": "Івенти"
